--- a/freaky.css
+++ b/freaky.css
@@ -55,7 +55,7 @@ h1 {
 }
 
 .topp {
-    background: url(Images/Skjermbilde2.PNG) left no-repeat, url(Images/Skjermbilde4.PNG) right no-repeat; 
+    background: url(Images/Skjermbilde2.png) left no-repeat, url(Images/Skjermbilde4.PNG) right no-repeat; 
     background-color: black;
     height: 60px;
     margin: -5px;
